# cookiecutter-pypackage-minimal

./: LICENSE  README.md  cookiecutter.json  setup.py
hooks/: post_gen_project.py
{{cookiecutter.package_name}}/: .gitignore  Dockerfile  LICENSE  README.md  README.rst  README.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
{{cookiecutter.package_name}}/.devcontainer/: devcontainer.json
{{cookiecutter.package_name}}/tests/: test_sample.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_name}}/: README.rst  setup.py  tox.ini
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py
